--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.ProductCategory.ProductCategoryName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ProductCategory.ProductCategoryName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
 
