--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.ProductCategory.ProductCategoryName)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.ProductName)
         </th>
         <th>
@@ -31,6 +34,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.ProductCategory.ProductCategoryName)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.ProductName)
         </td>
